--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+*{
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; 
+	font-family: "applekid", sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -7,11 +12,8 @@ body {
 
 .bg{
   background-image: url(pattern.svg);
-  /* background-size: cover; */
+  min-height: 240px;
+  background-size: cover;
 }
 
 
-*{
-  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; 
-	font-family: "applekid", sans-serif;
-}
