--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@font-face{
+/* @font-face{
 	font-family: "applekid";
 	src: url("apple_kid.ttf") format("truetype");
-}
+} */
 
 .App {
   text-align: center;
