--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
   color: white;
   list-style: none;
   text-align: left;
-  font-family: "applekid";
+  /* font-family: "applekid"; */
   margin: 10px 0;
   
 }
